[package]
name = "randscape"
version = "0.1.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "PCG toolkit for grids processing"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/randscape"
repository = "https://github.com/PsichiX/randscape"
documentation = "https://docs.rs/randscape"
readme = "README.md"
exclude = ["resources/"]

[dependencies]
vek = "0.17"
noise = "0.9"

[dev-dependencies]
image = "0.25"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.2" }
